Updated the README file

--- a/src/NN_libraries.ipynb
+++ b/src/NN_libraries.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "48b84159",
+   "id": "195c17ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "e4a4c566",
+   "id": "4a98a9fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "65d91087",
+   "id": "5bc0870c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "3e101f3d",
+   "id": "0160511d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "ff8334ff",
+   "id": "db64a0e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,17 +76,17 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "9283b88f",
+   "id": "b3bb5def",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'], )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "5911a043",
+   "id": "3719595b",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "94583288",
+   "id": "4cd0cf34",
    "metadata": {},
    "outputs": [
     {
